reshuffle packages to be more go-like
