# routes/contracts/create_template_request.go
@@ -1,7 +1,0 @@
-package contracts
-
-// @name CreateTemplateRequest
-type CreateTemplateRequest struct {
-	Name  string `json:"name"`
-	Email string `json:"email"`
-}
